Better list cretion -Added switch in modal for public access -Creating new list empties currentVehicle List and sets the Public switch correctly -Align buttons to center for better display -moved new and delete into the control buttons

--- a/html/index.css
+++ b/html/index.css
@@ -450,6 +450,7 @@ select {
 
 .multi-select-transfer>.transfer-options {
     flex-basis: 10%;
+    align-self: center;
 }
 
 .transfer-options>button {
